crates/biome_cli/tests/snapshots/main_cases_plugins/local_manifest_export_name_can_be_suppressed.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome lint '<TEMP_DIR>/local_manifest_export_name_can_be_suppressed/test.js'
```

## `biome.json`

```json
{ "plugins": ["./plugin"] }
```

## `plugin/biome-manifest.json`

```json
{
    "version": 1,
    "plugins": { "rules": [{ "noAssign": "rules/assign.grit" }] }
}
```

## `plugin/rules/assign.grit`

```grit
`Object.assign($args)` where {
    register_diagnostic(span = $args, message = "Prefer object spread")
}
```

## `test.js`

```js
// biome-ignore lint/plugin/noAssign: compatibility
Object.assign({}, value);

```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
