crates/biome_cli/tests/snapshots/main_cases_plugins/local_plugins_allow_duplicate_rule_names.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint '<TEMP_DIR>/local_plugins_allow_duplicate_rule_names/test.js'
```

## `biome.json`

```json
{ "plugins": ["./first/noAssign.grit", "./second/noAssign.grit"] }
```

## `first/noAssign.grit`

```grit
`Object.assign($args)` where {
    register_diagnostic(span = $args, message = "Diagnostic from first plugin")
}
```

## `second/noAssign.grit`

```grit
`Object.assign($args)` where {
    register_diagnostic(span = $args, message = "Diagnostic from second plugin")
}
```

## `test.js`

```js
Object.assign({});

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js:1:15 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Diagnostic from first plugin
  
  > 1 │ Object.assign({});
      │               ^^
    2 │ 
  

```

```block
test.js:1:15 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Diagnostic from second plugin
  
  > 1 │ Object.assign({});
      │               ^^
    2 │ 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 2 errors.
```
