crates/biome_cli/tests/snapshots/main_cases_plugins/package_qualified_suppression_only_suppresses_selected_package.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint '<TEMP_DIR>/package_qualified_suppression_only_suppresses_selected_package/test.js'
```

## `biome.json`

```json
{ "plugins": ["@scope/first-plugin/noAssign", "second-plugin/noAssign"] }
```

## `node_modules/@scope/first-plugin/biome-manifest.json`

```json
{
    "version": 1,
    "plugins": { "rules": [{ "noAssign": "rules/noAssign.grit" }] }
}
```

## `node_modules/@scope/first-plugin/package.json`

```json
{ "name": "@scope/first-plugin" }
```

## `node_modules/@scope/first-plugin/rules/noAssign.grit`

```grit
`Object.assign($args)` where {
    register_diagnostic(span = $args, message = "Diagnostic from @scope/first-plugin")
}
```

## `node_modules/second-plugin/biome-manifest.json`

```json
{
    "version": 1,
    "plugins": { "rules": [{ "noAssign": "rules/noAssign.grit" }] }
}
```

## `node_modules/second-plugin/package.json`

```json
{ "name": "second-plugin" }
```

## `node_modules/second-plugin/rules/noAssign.grit`

```grit
`Object.assign($args)` where {
    register_diagnostic(span = $args, message = "Diagnostic from second-plugin")
}
```

## `test.js`

```js
// biome-ignore lint/plugin/@scope/first-plugin/noAssign: compatibility
Object.assign({});

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js:2:15 plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Diagnostic from second-plugin
  
    1 │ // biome-ignore lint/plugin/@scope/first-plugin/noAssign: compatibility
  > 2 │ Object.assign({});
      │               ^^
    3 │ 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
