crates/biome_cli/tests/snapshots/main_cases_plugins/rejects_bare_package_import_in_manifest.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome lint biome-manifest.json
```

## `biome-manifest.json`

```json
{
    "version": 1,
    "plugins": { "rules": ["@shared/rules"] }
}
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
biome-manifest.json:1:1 deserialize ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × @shared/rules must select a named rule or preset from a package.
  
  > 1 │ {
      │ ^
  > 2 │     "version": 1,
  > 3 │     "plugins": { "rules": ["@shared/rules"] }
  > 4 │ }
      │ ^
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
