crates/biome_cli/tests/snapshots/main_cases_plugins/rejects_bare_plugin_package.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint '<TEMP_DIR>/rejects_bare_plugin_package/test.js'
```

## `biome.json`

```json
{ "plugins": ["@shared/plugin"] }
```

## `node_modules/@shared/plugin/biome-manifest.json`

```json
{
    "version": 1,
    "plugins": { "rules": [{ "noAssign": "rules/noAssign.grit" }] }
}
```

## `node_modules/@shared/plugin/package.json`

```json
{ "name": "@shared/plugin" }
```

## `test.js`

```js
Object.assign({}, value);

```

# Termination Message

```block
plugin ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Error(s) during loading of plugins:
    Plugin package @shared/plugin must select a named rule or preset.
  


```
